		+ added 'Copy link location' to the right-click menu.
		
	* 1.0 Finally 'the release':
		+ now xCHM only compiles with wxWidgets 2.6.0.
		+ text selection and copy/paste operations are available.
		+ searching in page with Ctrl+F is possible.
		+ changed the protocol prefix to 'xchm:' to avoid conflicts
		with the wxWindows-integrated chm support.
		+ improved CHM load times and UI usability during loading.

	* 1.1 Feature enhancements:
		+ tw translation added.
		+ fixed (wxWidgets bug?) bookmarks save on exit bug.
		+ applied patch from Fritz Elfert for <SPAN> tag support and
		better icons for the contents tree control items.

	* 1.2 Feature enhancements:
		+ added Chinese translation.
		+ improved CHM language detection support.
		+ fixed Cyrillic character mapping in Unicode builds.
		 
	* 1.3:
		+ added Czech translation.
		+ added Slovak translation.
		+ updated Russian translation.
		+ updated French translation.
		+ removed useless mouse scroll patch for Mac OS X.
		+ fixed the About dialog on Mac OS X.
		+ fixed the HTML link to Pabs' chmspec page.
		+ now allowing the 'back' button to get to the welcome page.
		+ the code compiles on Win32 with MinGW without patches
		+ added Win32 resource and icon files
		+ applied GCC 4.1 related patch

	* 1.4:
		+ fixed Polish translation.
		+ fixed command line relative path problem.
		+ the build scripts are MinGW32-friendly.
		+ fixed Windows CHM input stream bug.

	* 1.5:
		+ fixed booksmark selection bug.
		+ fixed Mac OS X locale warning.
		+ now text can be copied with ctrl(or cmd, on Mac)-C.
		+ added Copy toolbar button.
		+ added Edit menu bar.

	* 1.6:
		+ added Ukrainian translation.
		+ fixed nasty wxHTML-related bug with absolute .chm links.

	* 1.7:
		+ fixed the fix :-)
		+ the Ukrainian translation should have been in uk.po not
		ua.po

	* 1.7.1:
		+ the history and font dialog were broken.

	* 1.8:
		+ fixed the copy link location code.
		+ updated Polish translation.

